Updated web pages to link to calendar.data.soton.ac.uk

--- a/etc/data.html
+++ b/etc/data.html
@@ -16,6 +16,9 @@
 				Consequently, this site has many supplimentary functions, other than to
 				simply tell you what week of the adacemic year we are in currently.
 			</p>
+			<p>
+                                You can find other useful open data calendars at <a href="http://calendars.data.southampton.ac.uk/">http://calendars.data.southampton.ac.uk/</a>.
+			</p>
 
 			<h2>Calendar Feeds</h2>
 			<p>
