--- a/etc/wwii.html
+++ b/etc/wwii.html
@@ -21,6 +21,7 @@
 		<div id="formatbox">
 			<span class="links">
 				<a href="data.html">More Information</a>
+                                | <a href="http://calendars.data.southampton.ac.uk/">More Calendars</a>
 				| <a href="https://github.com/ads04r/whatweekisit">Fork me on Github</a>
 			</span>
 			<span class="formats">
